# llm-from-scratch

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Justfile  README.md  pyproject.toml
.claude/: settings.local.json
configs/: default.yaml
notebooks/: explore.ipynb
src/llm_from_scratch/: __init__.py  config.py
src/llm_from_scratch/cli/: generate.py  prepare_data.py  train.py
src/llm_from_scratch/core/: __init__.py  dataset.py  model.py  tokenizer.py
src/llm_from_scratch/generation/: __init__.py  generator.py  sampling.py
src/llm_from_scratch/tests/: test_dataset.py  test_model.py
src/llm_from_scratch/training/: __init__.py  optimizer.py  scheduler.py  trainer.py
src/llm_from_scratch/utils/: __init__.py  helpers.py  logging.py  metrics.py
